[project]
name = "docintel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "redis>=7.1.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.8.0",
    "pytest-benchmark>=5.2.3",
    "pytest-html>=4.1.1",
]
