[project]
name = "docintel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pgvector>=0.4.2",
    "psycopg2>=2.9.11",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.8.0",
    "pytest-benchmark>=5.2.3",
    "pytest-html>=4.1.1",
]
